@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 # 
-# RCS: @(#) $Id: tclInt.decls,v 1.20.2.3 2001/09/01 22:53:45 davygrvy Exp $
+# RCS: @(#) $Id: tclInt.decls,v 1.20.2.4 2001/09/10 17:15:13 andreas_kupries Exp $
 
 library tcl
 
@@ -824,6 +824,12 @@ declare 25 win {
 }
 declare 26 win {
     void TclWinSetInterfaces(int wide)
+}
+
+# Added in Tcl 8.3.3 / 8.4
+
+declare 27 win {
+    void TclWinFlushDirtyChannels (void)
 }
 
 #########################
